# financial-machine-learning

./: .gitignore  DECISIONS.md  README.md  REQUIREMENTS.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
data_preprocessing/: fetch_market_data.py
docs/: architecture.md  decisions.md  requirements.md
docs/api/: index.md
docs/api/data_preprocessing/: fetch_alternative_data.md  fetch_analytic_data.md  fetch_fundamental_data.md  fetch_market_data.md  (+5 more)
feature_analysis/: cross_validation.py  ensemble_methods.py  feature_importance.py  hyperparameter_tuning.py
notebooks/data_preprocessing/: fetch_market_data.ipynb  financial_data_labeling.ipynb  financial_data_structures.ipynb  fractionally_differentiate_features.ipynb  sample_weights.ipynb
notebooks/feature_analysis/: cross_validation.ipynb  feature_importance.ipynb
notebooks/model_backtesting/: backtest_overfitting.ipynb  backtest_synthetic.ipynb  backtest_validation.ipynb  bet_sizing.ipynb
notebooks/strategy_modeling/: cross_validation.ipynb  ensemble_methods.ipynb  feature_importance.ipynb  hyperparameter_tuning.ipynb
src/data_preprocessing/: fetch_market_data.py  financial_data_labeling.py  financial_data_structures.py  fractionally_differentiate_features.py  sample_weights.py
src/feature_analysis/: cross_validation.py  ensemble_methods.py  feature_importance.py  hyperparameter_tuning.py
src/model_backtesting/: backtest_overfitting.py  backtest_synthetic.py  backtest_validation.py  bet_sizing.py
src/strategy_modeling/: cross_validation.py  feature_importance.py  hyperparameter_tuning.py
(+15 files in other folders)
