[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-machine-learning"
version = "0.1.0"
description = "Research utilities for financial machine learning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alpaca-py",
  "matplotlib",
  "numpy",
  "pandas",
  "python-dotenv",
  "scikit-learn",
  "scipy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
